orchestration/kubernetes/ingress/ingress-cdn.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: cdn
    annotations:
        ingress.kubernetes.io/ssl-redirect: "true"
        cert-manager.io/cluster-issuer: letsencrypt-prod
        nginx.ingress.kubernetes.io/proxy-body-size: 32m
        nginx.ingress.kubernetes.io/proxy-buffer-size: 256k
spec:
    ingressClassName: nginx
    tls:
        -   hosts: ~
            secretName: cdn-certificate
    rules: ~
